src/styles/pages/news.scss
.news-archive {
  padding: 50px 0 30px;

  &__sidebar-wrapper {
    max-height: 600px;
  }

  &__sidebar {
    max-width: 390px;
    margin-left: auto;

    @include media-breakpoint-down(sm) {
      display: none;
    }
  }

  &__content {
    .meta-taxonomy {
      &__link {
        pointer-events: none;
      }
    }

    .date-separator {
      font-size: 18px;
      font-weight: 600;
      letter-spacing: 0.02em;

      @include media-breakpoint-up(md) {
        padding-left: 64px;
      }

      @include media-breakpoint-up(lg) {
        padding-left: 112px;
      }
      @include media-breakpoint-down(sm) {
        margin-bottom: 24px;
      }
    }
  }

  &__mobile {
    display: flex;
    flex-wrap: wrap;
    align-items: center;

    margin-bottom: 20px;

    width: 100%;
    @include make-col(12);

    .sorting--news {
      margin-bottom: 0;
      width: 100%;
      max-width: 100px;

      @include media-breakpoint-down(sm) {
        margin-left: 24px;

        font-size: 14px;
      }
    }
  }
  &__sorting {
    margin-right: 32px;

    width: 32px;
    height: 32px;
  }
  &__calendar {
    width: 32px;
    height: 32px;

    span {
      vertical-align: super;
    }

    &-mobile {
      width: 375px;

      max-height: 400px;

      @include media-breakpoint-down(sm) {
        margin-top: 16px;
        width: 100%;

        > * {
          max-width: 400px;
          margin-left: auto;
          margin-right: auto;
        }
      }
    }
  }

  &__filter {
    display: flex;

    margin-left: 21px;
    .svg-icon {
      color: $black;
    }
  }
}

.news-cats {
  max-width: 114px;
  
  letter-spacing: 0.02em;
  font-size: 14px;
}

